<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:strokeColor="#20000000"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical">


        <FrameLayout
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_background"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivUserIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/user__1_" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="12dp">

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_john_doe"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvUserPhno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_9876543210"
                android:textColor="#61000000"
                android:textSize="14sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_1"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:paddingStart="8dp"
            android:paddingEnd="4dp" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
